--- a/src/main/index.css
+++ b/src/main/index.css
@@ -11,7 +11,7 @@
 }
 
 #body {
-  height: 100%;
+  height: 100vh;
   /* background-color: blue; */
   width: 1024px;
   margin: 0 auto;
@@ -21,7 +21,7 @@
 
 #footer {
   height: 200px;
-  background-color: rgb(230, 230, 230 );
+  background-color: rgb(230, 230, 230);
 }
 
 #banner {
@@ -63,7 +63,7 @@
   margin-bottom: 12px;
   border: 1px solid rgb(230, 230, 230);
   border-radius: 12px;
-  overflow : hidden;
+  overflow: hidden;
 }
 
 .product-img {
@@ -95,4 +95,9 @@
 
 .product-avatar {
   width: 24px;
+}
+
+.product-link {
+  color: inherit;
+  text-decoration: none;
 }
