api주소변경 및 구매기능추가 및 반응형 웹 구현

--- a/src/App.css
+++ b/src/App.css
@@ -9,11 +9,6 @@ body,
   padding: 0;
 }
 
-#banner {
-  height: 300px;
-  background-color: yellow;
-}
-
 #header-area {
   width: 1024px;
   height: 100%;
@@ -37,9 +32,10 @@ body,
 }
 
 #body {
-  height: 100vh;
+  min-height: 100vh;
   /* background-color: blue; */
-  width: 1024px;
+  max-width: 1024px;
+  width: 100%;
   margin: 0 auto;
   /* 자식이 부모를 기준으로 가운데 정렬을 시킬때 margin 0 auto 사용 */
   padding-bottom: 24px;
@@ -48,4 +44,16 @@ body,
 #footer {
   height: 200px;
   background-color: rgb(230, 230, 230);
+}
+
+@media screen and (max-width: 400px) {
+  .product-card {
+    width: 160px !important;
+  }
+  #header {
+    padding: 0 8px;
+  }
+  .ant-carousel {
+    margin: 0 -8px;
+  }
 }
